# rust-chunk-generator

./: Cargo.toml
.specstory/history/: 2025-06-04_05-25-prepare-get-set-functions-for-variables.md  2025-06-05_14-48-kod-incele-ve-açıkla.md  2025-06-17_22-00-line-342'deki-hatayı-çöz.md  2025-06-18_09-54-voksel-motoru-kodu-analizi.md  2025-06-18_12-25-importing-virtual-key-code.md  2025-06-18_12-28-fix-unresolved-import-error-in-rust.md  2025-06-18_15-38-delta-time-değişkeni-hesaplama-yeri.md  2025-06-18_17-18-update-winit-and-wgpu-code-example.md  2025-06-18_17-41-bütün-kamera-sisteminin-çalışma-prensipleri.md  2025-06-18_21-38-programı-tam-ekran-modunda-başlatma.md  2025-06-18_21-42-kamera-hareketinde-ghosting-sorununu-çözme.md  2025-06-18_22-57-i̇nceleme-ve-renderer-rs-düzenlemeleri.md  2025-06-18_23-12-kameranın-y-ekseninde-hareket-kontrolü.md  2025-06-20_14-38-i̇ngilizce-yorumları-türkçe'ye-çevir.md  2025-06-20_17-26-kodun-render-mantığını-açıklama.md  2025-06-20_23-43-sistem-yeniden-başlatma-sorunu.md  2025-06-20_23-59-kod-yeni-blokları-oluşturma-yöntemi.md  2025-06-21_00-45-oyun-dünyası-zemin-ve-chunk-ayarları.md
src/: camera.rs  camera_controller.rs  chunk.rs  main.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs  voxel.rs
