[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.9"
wgpu = "25.0.0"
pollster = "0.4.0"
log = "0.4.27"
env_logger = "0.11.8"
bytemuck = { version = "1.23.0", features = ["derive"] }
image = { version = "0.25.6", default-features = true, features = ["jpeg", "png"] }
anyhow = "1.0.98"
cgmath = "0.18.0"
noise = "0.8.2"